# ambidecstrous

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
ambidecstrous/: audio_processing.py  decoders.py  main.py  utils.py
ambiplayer/: audio_processing.py  decoders.py  main.py
mappings/: cube.json  octagon.json  octagon_cube.json  stereo.json
tests/: tests.py
uosambiplayer/: audio_processing.py
